# uav-swarm-sim

./: .gitignore  ADVERSARIAL_TESTER_PROMPT.md  CLAUDE.md  PROJECT_GUIDE.md  README.md  README2.md  Simuliacijos_techninis_gidas.docx  mission_analyst_prompt.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
config/: default.yaml  study01_demand.yaml
config/scenarios/: smoke.yaml
data/areas/: example_area.geojson  smoke_area.geojson
docs/: thesis_roadmap.md
docs/proposals/: energy_map_rth.md  scale_sweep_v2.md
src/uav_swarm_sim/: __init__.py
src/uav_swarm_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_batch1.py  test_batch2.py  test_batch3.py  test_batch4.py  test_batch5.py  test_batch6.py  test_connector_routing.py  test_critical_invariants.py  test_decomposition_sliver.py  test_dubins_shortest_path.py  test_dynamic_obstacles.py  test_ferry.py  test_fleet_sizing_analyzer.py  test_generate_shapes.py  test_h3_scale_sweep.py  test_kmeans_peer.py  test_launch_site_feasibility.py  test_obstacle_recovery.py  test_per_agent_energy.py  test_regime_calculator.py  test_replay.py  test_rth_preemption.py  test_run_output.py  test_safety_monitor_separation.py  test_segment_obstacle_geometry.py  test_shape_regime_table.py  test_shape_sweep.py  test_smoke.py  test_spare_sizing.py  test_target_mission.py  test_thesis_invariants.py  test_viz_comm_range.py
tests/e2e/: test_experiment_clis.py  test_shape_sweep.py
tests/integration/: test_connector_routing.py  test_dynamic_obstacles.py  test_energy_map_stage1.py  (+7 more)
(+122 files in other folders)
